--- a/_posts/2020-01-05-dino-post.md
+++ b/_posts/2020-01-05-dino-post.md
@@ -2,16 +2,56 @@
 layout: post
 categories: posts
 title: DINO (Design & Innovation)
+subtitle: A project from UNIST prototyping club.
+featured-image: /images/dino/land-abstract.jpg
 tags: [DINO, DIY, KartRider, SolidR4, video]
 date-string: JANUARY 05, 2020
 ---
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="_/js/libs/jquery-1.9.1.min.js"><\/script>')</script>
+
+
 <center>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/yz-4brOfaqA" frameborder="0" allowfullscreen></iframe>
 </center>
 
-<hr>
+Description Here.
 
 
-```html
-<iframe width="560" height="315" src="//www.youtube.com/embed/SU3kYxJmWuQ" frameborder="0"></iframe>
-```
+<center>
+    <div class="photoset-grid-custom" data-layout="213">
+        <img src="/images/dino/land-5.jpg">
+        <img src="/images/dino/land-6.jpg">
+        <img src="/images/dino/land-3.jpg">
+        <img src="/images/dino/land-1.jpg">
+        <img src="/images/dino/land-2.jpg">
+        <img src="/images/dino/land-4.jpg">
+       
+    </div>
+</center>
+
+
+
+
+<script src="/assets/js/jquery.photoset-grid.js"></script>
+
+<script type="text/javascript">
+    $('.photoset-grid-custom').photosetGrid({
+    // Set the gutter between columns and rows
+    gutter: '5px',
+  
+    // Wrap the images in links
+    highresLinks: true,
+  
+    // Asign a common rel attribute
+    rel: 'print-gallery',
+
+    onInit: function(){},
+    
+    onComplete: function(){
+        // Show the grid after it renders
+        $('.photoset-grid-custom').attr('style', '');
+    }
+});
+</script>
+
