--- a/_posts/2020-01-05-dino-post.md
+++ b/_posts/2020-01-05-dino-post.md
@@ -2,7 +2,7 @@
 layout: post
 categories: posts
 title: DINO (Design & Innovation)
-subtitle: A project from UNIST prototyping club.
+subtitle: Kart-making project at UNIST prototyping club.
 featured-image: /images/dino/land-abstract.jpg
 tags: [DINO, DIY, KartRider, SolidR4, video]
 date-string: JANUARY 05, 2020
@@ -11,13 +11,19 @@ date-string: JANUARY 05, 2020
 <script>window.jQuery || document.write('<script src="_/js/libs/jquery-1.9.1.min.js"><\/script>')</script>
 
 
+We started this project for fun. The primary goal of this project was to produce the Solid R4 kart model from scratch. The Solid R4 kart model is the default frame you're given when you sign up to a popular racing game called <a href="http://kart.nexon.com/events/2020/0102/Event.aspx">Kart Rider</a>. Due to the nature of the project, no specific technical skills were needed to complete this; only a bit of patience. 
+<br>
+<br>
 <center>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/yz-4brOfaqA" frameborder="0" allowfullscreen></iframe>
+<br>
+This is the video of our club members riding the kart. 
 </center>
+<br>
+<br>
 
-Description Here.
 
-
+### Pictures
 <center>
     <div class="photoset-grid-custom" data-layout="213">
         <img src="/images/dino/land-5.jpg">
@@ -29,7 +35,6 @@ Description Here.
        
     </div>
 </center>
-
 
 
 
