changed made to posts, layout

--- a/_posts/2020-01-08-yoga-post.md
+++ b/_posts/2020-01-08-yoga-post.md
@@ -16,7 +16,7 @@ Yoga is a discipline that integrates mind and bodily exercises practiced for a n
 
 
 ### More Info
- <li> <a a href="{{ "/Hyunmi_CV_Jan2020.pdf" | absolute_url }}"> Download </a></li>
+ <li> <a a href="{{ "/Exploring Design Opportunities for Technology-Supported Yoga Practices at Home.pdf" | absolute_url }}"> Download </a></li>
 <br>
 
 
